Update docs for the native libhegel architecture
Hegel no longer spawns the Python hegel-core server and speaks a wire
protocol to it; every library now drives libhegel, a native shared
library containing a Rust port of Hypothesis's engine, in-process
through its C ABI. Update the site to match:

- Replace the protocol reference with a libhegel reference documenting
  where to get libhegel, the C API's shape, and the current generator
  schema language (301 redirect from /reference/protocol).
- Rewrite the installation reference around how each library obtains
  libhegel (bundled, downloaded, or compiled in) and the
  HEGEL_LIBHEGEL_PATH override; drop all Python/uv content.
- Rewrite "How Hegel works" around the in-process engine and schemas.
- Fix the homepage Go example (hegel.Case and hegel.Text(min, max) no
  longer exist) and TypeScript example (hegel.test now runs eagerly and
  needs a thunk wrapper); add an OCaml tab.
- Add hegel-ocaml and libhegel to the sidebar, dropping the deprecated
  hegel-core; retire the community hegel-java entry now that an
  official hegel-java exists.
- Update compatibility for per-library Windows support and the new
  tagline everywhere.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>